--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -10,6 +10,11 @@
   "blog": "博客",
   "autoFinanceSummit": "2023年汽车金融峰会",
   "careerAtNetsol": "在Netsol的职业",
-  "regions": "地区"
+  "regions": "地区",
+  "aboutHeading":"现代奴隶制透明度声明",
+"aboutLine1":"NetSol Technologies, Inc.（“NETSOL”）承认国际公认的人权，并全力以赴打击奴隶制和人口贩卖。我们设计、开发、市场推广并向全球汽车融资租赁、银行和金融服务行业的客户出口专有软件产品。我们还提供系统集成、咨询以及以收取客户费用的IT产品和服务。",
+"aboutLine2":"我们在全球拥有七家全资子公司和六家多数股权子公司，包括在英国，而我们的母公司则注册在美国。NETSOL在全球拥有超过1500名正式员工。",
+"aboutLine3":"NETSOL人权政策承认《人权法案》中规定的国际人权。我们的政策反映了我们对奴隶制和人口贩卖责任的认识。"
+
 
 }
